# deep_coffee_project

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  SETUP_STAGE1.md  pyproject.toml  requirements.txt  test_imports.py
_archive/unused_scaffolds/: 02_stage2_cnn.ipynb  03_stage3_transfer_learning.ipynb  05_stage5_finetuning_and_deploy.ipynb
configs/: __init__.py  config.py  logging.yaml
models/stage3_vit/checkpoint-1200/: trainer_state.json
models/stage3_vit/checkpoint-240/: trainer_state.json
models/stage3_vit_checkpoint/checkpoint-240/: trainer_state.json
models/stage3_vit_checkpoint/checkpoint-900/: config.json  trainer_state.json
notebooks/: 01_stage1_eda_and_mlp.ipynb  02_stage2_cnn.ipynb  03_stage3_nlp.ipynb  03_stage3_vit.ipynb  04_stage4_generative.ipynb  05_stage5_finetuning_deployment.ipynb
reports/: presentation_outline.md  technical_report_outline.md
scripts/: download_data.py  evaluate_stage1.py  run_demo.py  train_stage1.py
src/: __init__.py
src/data/: __init__.py  dataset.py  eda.py  split.py  transforms.py
src/deployment/: __init__.py  app_gradio.py  inference.py
src/evaluation/: __init__.py  error_analysis.py  metrics.py  plots.py
src/models/: __init__.py  cnn.py  generative.py  mlp.py  pretrained.py
src/training/: __init__.py  callbacks.py  engine.py  losses.py  trainer.py
src/utils/: io.py  logger.py  paths.py  seed.py
tests/: __init__.py  test_config.py  test_dataset.py  test_model_shapes.py
